--- a/Games/Sound Matching/game.html
+++ b/Games/Sound Matching/game.html
@@ -67,7 +67,7 @@ button:hover {
 
 <main>
 	<div class="form">
-		<button class="btn-init" onclick="init(-1)">Παίξε</button>
+		<button class="btn-init" onclick="init(-1)">Play</button>
 	</div>
 	<div class="stage">
 		<div class="counter"></div>
@@ -76,18 +76,18 @@ button:hover {
 	</div>
 	
 	<div class="success">
-		<h1>Μπράβο!!!</h1>
-		<p>Απάντησες σωστά σε <span class="answers"></span> ερωτήσεις</p>
-		<p>Χρόνος που απέμεινε: <span class="time"></span></p>
-		<p>Πόντοι: <span class="points"></span></p>
-		<button class="btn-init" onclick="init(-1)">Ξαναπαίξε</button>
+		<h1>Well done!!!</h1>
+		<p>You answered right in <span class="answers"></span> questions!</p>
+		<p>Time left <span class="time"></span> seconds</p>
+		<p>Points: <span class="points"></span></p>
+		<button class="btn-init" onclick="init(-1)">Play Again</button>
 	</div>
 	<div class="failed">
-		<h1>Βλάκα!!!</h1>
-		<p>Απάντησες σωστά σε <span class="answers"></span> ερωτήσεις</p>
-		<p>Χρόνος που απέμεινε: <span class="time"></span></p>
-		<p>Πόντοι: <span class="points"></span></p>
-		<button class="btn-init" onclick="init(-1)">Ξαναπαίξε</button>
+		<h1>Let's try it again! You can do better!!</h1>
+		<p>You answered right in <span class="answers"></span> questions!</p>
+		<p>Time left <span class="time"></span> seconds</p>
+		<p>Points: <span class="points"></span></p>
+		<button class="btn-init" onclick="init(-1)">Play Again</button>
 	</div>
 </main>
 
